--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ a.active {
 .header {
   height: auto;
 }
+
 #header-scroll {
   padding-left: 1%;
   position: fixed;
@@ -47,11 +48,6 @@ a.active {
   -webkit-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
-  filter: blur(0.1px);
-  -o-filter: blur(0.1px);
-  -ms-filter: blur(0.1px);
-  -moz-filter: blur(0.1px);
-  -webkit-filter: blur(0.1px);
 }
 #header-scroll h1 {
   line-height: 43px;
@@ -65,7 +61,6 @@ a.active {
 #header-scroll.small {
   height: auto;
   display: inline-block;
-  float: left;
 }
 #header-scroll.small h1 {
   padding: 10px 0;
@@ -77,6 +72,7 @@ a.active {
 }
 body {
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 nav {
   width: 100%;
@@ -88,7 +84,8 @@ nav ul {
   padding: 20px;
   margin: 0 auto;
   list-style: none;
-  text-align: center;
+  text-align: right;
+  padding-right: 10vw;
 }
 nav ul li {
   display: inline-block;
@@ -117,8 +114,7 @@ section {
   height: 100%;
   padding-left: 10vw;
   padding-right: 15vw;
-  padding-top: 37vh;
-
+  padding-top: 30vh;
   text-align: center;
 }
 
@@ -127,8 +123,13 @@ section {
     url("../assets/hero.jpeg");
   transition: all 0.5s ease;
   background-size: cover;
+  background-position: left;
   background-repeat: no-repeat;
   color: white;
+}
+
+.logo-responsive {
+  display: none;
 }
 
 #home h1 {
@@ -144,6 +145,7 @@ section {
     url("../assets/gardenplan.jpeg");
   background-size: 100vw;
   transition: all 0.5s ease;
+  background-position: right;
 }
 
 #services {
@@ -151,6 +153,7 @@ section {
     url("../assets/patio.jpeg");
   transition: all 0.5s ease;
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   color: white;
 }
@@ -164,8 +167,18 @@ section {
   transition: all 0.5s ease;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: left;
   color: #333333;
   line-height: 2;
+}
+
+.contact {
+  text-align: left;
+  margin-left: 20vw;
+}
+
+.contact-responsive {
+  display: none;
 }
 
 @media only screen and (max-width: 825px) {
@@ -182,6 +195,39 @@ section {
   }
 
   h1 {
-    font-size: 3em;
+    font-size: 2em;
+  }
+
+  .logo-responsive {
+    margin-top: 10px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  #home h1 {
+    font-size: 2em;
+  }
+
+  nav ul {
+    margin-right: 15% !important;
+    background: rgba(255, 255, 255, 0.95);
+    width: 100%;
+    line-height: 5px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  a {
+    color: #333333 !important;
+  }
+
+  .contact {
+    display: none;
+  }
+
+  .contact-responsive {
+    display: block;
+    text-align: left;
+    font-size: 0.7em;
   }
 }
