--- a/index.css
+++ b/index.css
@@ -170,6 +170,7 @@ section {
   background-position: left;
   color: #333333;
   line-height: 2;
+  padding-top: 20vh;
 }
 
 .contact {
@@ -192,6 +193,12 @@ footer {
 
 #contact {
   height: 95% !important;
+}
+
+.photo img {
+  border-radius: 50%;
+  height: 20vh;
+  margin-top: 10vh;
 }
 
 @media only screen and (max-width: 825px) {
